--- a/hackumass2019/package.json
+++ b/hackumass2019/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "shelljs": "^0.8.3",
     "video-react": "^0.14.1",
     "video.js": "^7.6.5"
   },
